4-platform-admin/constraint-ext-services/contacts-svc-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: contacts
  namespace: contacts
  labels:
    org: cymbal-bank
spec:
  type: LoadBalancer
  selector:
    app: contacts
  ports:
  - name: http
    port: 80
    targetPort: 8080
